[package]
name = "example_block_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
chrono = "0.3.0"
serde = {version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
hex = "0.4.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
